fw_actual.v4
# Generated by iptables-save v1.8.7 on Thu Aug 29 11:52:55 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 46.233.0.0/16 -j ACCEPT
-A INPUT -s 176.62.0.0/16 -j ACCEPT
-A INPUT -s 109.120.0.0/16 -j ACCEPT
-A INPUT -s 94.137.0.0/16 -j ACCEPT
#-A INPUT -p udp -m udp --dport 35076 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 35076 -j ACCEPT
-A INPUT -p all -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 88 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT

COMMIT
# Completed on Thu Aug 29 11:52:55 2024
# Generated by iptables-save v1.8.7 on Thu Aug 29 11:52:55 2024

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

COMMIT
# Completed on Thu Aug 29 11:52:55 2024
